Add latest DNS changes (#2753)
docker compose completed with blockdevices
NFS tested with RAC on Docker with Docker Compose
NEW DNS all testing completed with Podman and Podman Compose

--- a/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racdockercompose/compose-files/blockdevices/docker-compose-addition.yml
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racdockercompose/compose-files/blockdevices/docker-compose-addition.yml
@@ -1,7 +1,7 @@
 ---
 version: "3"
 services:
-  racnode2:
+  racnoded2:
     container_name: ${RACNODE2_CONTAINER_NAME}
     hostname: ${RACNODE2_HOST_NAME}
     image: ${RACNODE_IMAGE_NAME}
