--- a/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racdockercompose/compose-files/blockdevices/docker-compose.yml
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racdockercompose/compose-files/blockdevices/docker-compose.yml
@@ -1,7 +1,7 @@
 ---
 version: "3"
 services:
-  racdns:
+  rac-dnsserver:
     container_name: ${DNS_CONTAINER_NAME}
     hostname: ${DNS_HOST_NAME}
     image: ${DNS_IMAGE_NAME}
@@ -9,22 +9,21 @@ services:
     environment:
       SETUP_DNS_CONFIG_FILES: "setup_true"
       DOMAIN_NAME: ${DNS_DOMAIN}
-      RAC_NODE_NAME_PREFIX: ${RAC_NODE_NAME_PREFIX}
-    sysctls:
-        - net.ipv6.conf.all.disable_ipv6=1
+      RAC_NODE_NAME_PREFIXD: ${RAC_NODE_NAME_PREFIXD}
+      WEBMIN_ENABLED: false
     cap_add:
-      - SYS_ADMIN
+      - AUDIT_WRITE
     healthcheck:
       test: ["CMD-SHELL", "if nslookup $SCAN_NAME; then exit 0; else exit 1; fi"]
       interval: ${HEALTHCHECK_INTERVAL}
       timeout: ${HEALTHCHECK_TIMEOUT}
       retries: ${HEALTHCHECK_RETRIES}
     networks:
-      rac_pub1_nw:
-        ipv4_address: ${DNS_PUBLIC_IP}
-  racnode1:
+      - rac_pub1_nw
+      - rac_priv1_nw
+  racnoded1:
     depends_on:
-      racdns:
+      rac-dnsserver:
         condition: service_healthy
     container_name: ${RACNODE1_CONTAINER_NAME}
     hostname: ${RACNODE1_HOST_NAME}
@@ -56,7 +55,7 @@ services:
       ASM_DEVICE_LIST: ${ASM_DEVICE_LIST}
       ASM_DISCOVERY_DIR: ${ASM_DISCOVERY_DIR}
       CMAN_HOSTNAME: ${CMAN_HOSTNAME}
-      CMAN_IP: ${CMAN_IP}
+      CMAN_IP: ${CMAN_PUBLIC_IP}
       COMMON_OS_PWD_FILE: ${COMMON_OS_PWD_FILE}
       PWD_KEY: ${PWD_KEY}
       RESET_FAILED_SYSTEMD: "true"
@@ -78,11 +77,11 @@ services:
       interval: ${HEALTHCHECK_INTERVAL}
       timeout: ${HEALTHCHECK_TIMEOUT}
       retries: ${HEALTHCHECK_RETRIES}
-  racnode-cman:
+  racnodedc1-cman:
     depends_on:
-      racdns:
+      rac-dnsserver:
         condition: service_healthy
-      racnode1:
+      racnoded1:
         condition: service_healthy
     container_name: ${CMAN_CONTAINER_NAME}
     hostname: ${CMAN_HOST_NAME}
