fixes for compose files for RAC (#2755)
* fixes for docker-compose

* minor fixes

* minor fixes

* minor fixes

--- a/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racdockercompose/compose-files/blockdevices/docker-compose.yml
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/samples/racdockercompose/compose-files/blockdevices/docker-compose.yml
@@ -84,7 +84,7 @@ services:
       racnoded1:
         condition: service_healthy
     container_name: ${CMAN_CONTAINER_NAME}
-    hostname: ${CMAN_HOST_NAME}
+    hostname: ${CMAN_HOSTNAME}
     image: ${CMAN_IMAGE_NAME}
     dns_search: ${DNS_DOMAIN}
     environment:
@@ -102,7 +102,7 @@ services:
     healthcheck:
       test:
         - CMD-SHELL
-        - /bin/bash -c "export ORACLE_HOME=/u01/app/oracle/product/${CMAN_VERSION}/client_1 && export LD_LIBRARY_PATH=${ORACLE_HOME}/lib && /u01/app/oracle/product/${CMAN_VERSION}/client_1/bin/cmctl show service -c ${CMAN_HOST_NAME}.${DNS_DOMAIN} | grep -q 'Instance \"cman\", status READY'"
+        - /bin/bash -c "export LD_LIBRARY_PATH=${ORACLE_HOME}/lib && /u01/app/oracle/product/${CMAN_VERSION}/client_1/bin/cmctl show service -c ${CMAN_HOSTNAME}.${DNS_DOMAIN} | grep -q 'Instance \"cman\", status READY'"
       interval: ${HEALTHCHECK_INTERVAL}
       timeout: ${HEALTHCHECK_TIMEOUT}
       retries: ${HEALTHCHECK_RETRIES}
