Add Instant Client 19 for OL0
Signed-off-by: Christopher Jones <christopher.jones@oracle.com>

--- a/.github/workflows/build-and-push-instantclient-images.yml
+++ b/.github/workflows/build-and-push-instantclient-images.yml
@@ -39,7 +39,7 @@ jobs:
             git diff --name-only '${{ github.event.before }}..${{ github.event.after }}' > "${changes}"
             if grep -q build-and-push-instantclient-images.yml "${changes}"; then
               echo "PUSH: Action updated: rebuilding all images"
-              ol="oraclelinux7 oraclelinux8"
+              ol="oraclelinux7 oraclelinux8 oraclelinux9"
               ic="19 21"
             else
               echo "PUSH: Rebuilding changed images only"
@@ -48,6 +48,9 @@ jobs:
               fi
               if grep -q oraclelinux8 "${changes}"; then
                 ol="${ol} oraclelinux8"
+              fi
+              if grep -q oraclelinux9 "${changes}"; then
+                ol="${ol} oraclelinux9"
               fi
               if grep -q /19/ "${changes}"; then
                 ic="19"
@@ -58,7 +61,7 @@ jobs:
             fi
           else
             echo "MANUAL: Rebuilding all"
-            ol='oraclelinux7 oraclelinux8'
+            ol="oraclelinux7 oraclelinux8 oraclelinux9"
             ic="19 21"
           fi
           echo "Rebuilding: ${ol} ${ic}"
@@ -81,6 +84,9 @@ jobs:
           do
             for i in ${{ steps.linux-version.outputs.ic }}
             do
+              if [[ ${o} = "oraclelinux9" && ${i} != "19" ]]; then
+                continue
+              fi
               docker build --tag ghcr.io/${{ steps.repo-owner.outputs.repo-owner }}/${o}-instantclient:${i} OracleInstantClient/${o}/${i}
             done
           done
@@ -91,6 +97,9 @@ jobs:
           do
             for i in ${{ steps.linux-version.outputs.ic }}
             do
+              if [[ ${o} = 'oraclelinux9' && ${i} != '19' ]]; then
+                continue
+              fi
               docker push ghcr.io/${{ steps.repo-owner.outputs.repo-owner }}/${o}-instantclient:${i}
             done
           done
