fix(ci): update Super Linter configuration for v6
Signed-off-by: Avi Miller <avi.miller@oracle.com>

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -10,6 +10,11 @@ jobs:
     name: Lint new or modified files
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: read
+      statuses: write
+
     steps:
       - name: Checkout Git repository with history
         uses: actions/checkout@v4
