--- a/OracleGoldenGate/23/nginx/ogg.conf
+++ b/OracleGoldenGate/23/nginx/ogg.conf
@@ -1,8 +1,8 @@
-## Copyright (c) 2021, Oracle and/or its affiliates.
+## Copyright (c) 2024, Oracle and/or its affiliates.
 
 ##
 ##  ogg.conf
-##  Nginx configuration file for OGG Deployment
+##  Configuration file for OGG Deployment
 ##
 
 ##
