NOSQL - Update to version 23.3.32 (#2788)
* Update to NoSQL CE 23.3.32

* Update to NoSQL CE 23.3.32

--- a/NoSQL/ce-sec/Dockerfile
+++ b/NoSQL/ce-sec/Dockerfile
@@ -5,9 +5,9 @@ FROM ghcr.io/graalvm/jdk:ol8-java17
 
 LABEL org.opencontainers.image.source = "https://github.com/oracle/docker-images"
 
-ARG KV_VERSION=23.3.30
+ARG KV_VERSION=23.3.32
 ARG DOWNLOAD_ROOT=http://download.oracle.com/otn-pub/otn_software/nosql-database
-ARG DOWNLOAD_FILE="kv-ce-${KV_VERSION}.zip"
+ARG DOWNLOAD_FILE="community-edition-${KV_VERSION}.zip"
 ARG DOWNLOAD_LINK="${DOWNLOAD_ROOT}/${DOWNLOAD_FILE}"
 
 ENV KV_PROXY_PORT 8080
