--- a/OracleDatabase/SingleInstance/dockerfiles/23.4.0/oracle-free-23ai.conf
+++ b/OracleDatabase/SingleInstance/dockerfiles/23.4.0/oracle-free-23ai.conf
@@ -1,5 +1,5 @@
 # This is a configuration file to setup the Oracle Database. 
-# It is used when running '/etc/init.d/oracle-free-23c configure'.
+# It is used when running '/etc/init.d/oracle-free-23ai configure'.
 
 # LISTENER PORT used Database listener, Leave empty for automatic port assignment
 LISTENER_PORT=1521
