--- a/OracleJava/11/Dockerfile.ol8
+++ b/OracleJava/11/Dockerfile.ol8
@@ -4,19 +4,19 @@
 #
 # ORACLE DOCKERFILES PROJECT
 # --------------------------
-# This is the Dockerfile for Oracle Server JRE 8 on Oracle Linux 8
+# This is the Dockerfile for Oracle JDK 11 on Oracle Linux 8
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
 #
-# (1) server-jre-8uXX-linux-x64.tar.gz
+# (1) jdk-11.XX_linux-x64_bin.tar.gz or jdk-11.XX_linux-aarch64_bin.tar.gz
 #     Download from https://www.oracle.com/java/technologies/downloads/
 #
 # HOW TO BUILD THIS IMAGE
 # -----------------------
-# Put the downloaded file in the same directory as this Dockerfile
+# Put all downloaded files in the same directory as this Dockerfile
 # Run:
-#      $ docker build -t oracle/serverjre:8 .
+#      $ docker build -t oracle/jdk:11 .
 #
 # This command is already scripted in build.sh so you can alternatively run
 #		$ bash build.sh 8
@@ -27,41 +27,53 @@ FROM oraclelinux:8 as builder
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
-# Since the files is compressed as tar.gz first yum install tar. gzip is already in oraclelinux:8
 RUN dnf install -y tar
 
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
 
+
 # Environment variables for the builder image.
 # Required to validate that you are using the correct file
 
-ENV JAVA_HOME=/usr/java/jdk-8
+ENV JAVA_HOME=/usr/java/jdk-11
 
-COPY server-jre-8u*-linux-x64.tar.gz /tmp/jdk.tgz
+##
+COPY *.tar.gz /tmp/
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN set -eux; \
-	JAVA_SHA256=f6ad55ddd04f3a3a920312092e29be872b76104aded2cd5df51edb50c14136f2 ; \
-	echo "$JAVA_SHA256 */tmp/jdk.tgz" | sha256sum -c -; \
+	ARCH="$(uname -m)" && \
+    if [ "$ARCH" = "x86_64" ]; \
+    then \
+		mv "$(ls /tmp/jdk-11*_linux-x64_bin.tar.gz)" /tmp/jdk.tar.gz ; \
+        JAVA_SHA256=f50fdec8a48a9b360d30ecc29af36f63f04f0b70ec829d3bf821e4e361682791 ; \
+    else \
+	    mv "$(ls /tmp/jdk-11*_linux-aarch64_bin.tar.gz)" /tmp/jdk.tar.gz ; \
+    	JAVA_SHA256=ff0c3387f47ed2eff9fdf936952573113824fc29de463bb13a3a804cc13d2ae8 ; \
+    fi && \
+	echo "$JAVA_SHA256 */tmp/jdk.tar.gz" | sha256sum -c -; \
 	mkdir -p "$JAVA_HOME"; \
-	tar --extract --file /tmp/jdk.tgz --directory "$JAVA_HOME" --strip-components 1;
+	tar --extract --file /tmp/jdk.tar.gz --directory "$JAVA_HOME" --strip-components 1
 
-## Get a fresh version of SLIM for the final image
-
+## Get a fresh version of OL8 for the final image
 FROM oraclelinux:8
 
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
 
-ENV JAVA_HOME=/usr/java/jdk-8
+ENV JAVA_HOME=/usr/java/jdk-11
 
 ENV	PATH $JAVA_HOME/bin:$PATH
 
 # Copy the uncompressed Java Runtime from the builder image
 COPY --from=builder $JAVA_HOME $JAVA_HOME
 
-##
-RUN	dnf -y update; \
+RUN set -eux; \
+	dnf -y update; \
+	dnf install -y \
+# JDK assumes freetype is available
+		freetype fontconfig \
+	; \
 	rm -rf /var/cache/dnf; \
 	ln -sfT "$JAVA_HOME" /usr/java/default; \
 	ln -sfT "$JAVA_HOME" /usr/java/latest; \
@@ -71,6 +83,6 @@ RUN	dnf -y update; \
 		alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
 	done; \
 # -Xshare:dump will create a CDS archive to improve startup in subsequent runs
-# the file will be stored as /usr/java/jdk-8/jre/lib/amd64/server/classes.jsa
-# See https://docs.oracle.com/javase/8/docs/technotes/guides/vm/class-data-sharing.html
 	java -Xshare:dump;
+
+CMD ["jshell"]
