Adding OHS 12.2.1.4 dockerfiles and removing 12.2.1.3 which is no lon… (#2796)
* Adding OHS 12.2.1.4 dockerfiles and removing 12.2.1.3 which is no longer supported

* Fix copyright statements, new version of the provisioning script

* replace the word Docker for Containers

* delete 12213 samples and replace the references of Docker for containers or images

* Correct lint errors

* Correct Lint Errors

* fix more LINT errors

* Lint warnings

* correct Lint warnings

* fix Lint warning

* Changes to the scripts to address comments

* Changes to scripts

* fix ORACLE_HOME and WLST_HOME

* change location where container-scripts are copied to

* replace container-scripts directories for /u01/oracle

* default domain home

* Add logic to verify that the WebGate configuration is provided

* Correcting Lint errors

* Correct gt 1

--- a/OracleHTTPServer/dockerfiles/12.2.1.4.0/Dockerfile
+++ b/OracleHTTPServer/dockerfiles/12.2.1.4.0/Dockerfile
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2016-2019 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2024 Oracle and/or its affiliates. All rights reserved.
 
 
 #
@@ -7,17 +7,17 @@
 #
 # ORACLE HTTP Server DOCKERFILES PROJECT
 # -----------------------------------------
-# This is the DockerFile for Oracle HTTP Server 12.2.1.3.0
+# This is the DockerFile for Oracle HTTP Server 12.2.1.4.0
 #
 # IMPORTANT
 # -------------------------------------------
-# The resulting image of this Dockerfile would have Oracle Linux 7 and Oracle HTTP Server 12.2.1.3.0 installed in standalone mode.
+# The resulting image of this Dockerfile would have Oracle Linux 7 and Oracle HTTP Server 12.2.1.4.0 installed in standalone mode.
 
 # A standalone domain will be configured in this image
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
-# (1) fmw_12.2.1.3.0_ohs_linux64_Disk1_1of1.zip
+# (1) fmw_12.2.1.4.0_ohs_linux64_Disk1_1of1.zip
 #     Download from http://www.oracle.com/technetwork/middleware/webtier/downloads/index-jsp-156711.html
 #
 # HOW TO BUILD THIS IMAGE
@@ -25,7 +25,7 @@
 # Put all downloaded files in the same directory as this Dockerfile
 # As root user run following command manually:
 #
-#     $ sh buildDockerImage.sh -v 12.2.1.3.0
+#     $ sh buildDockerImage.sh -v 12.2.1.4.0
 #
 # Alternatively you can also run
 # 
@@ -33,38 +33,32 @@
 #
 # For example
 # 
-#     $ docker build --force-rm=true --no-cache=true --rm=true -t oracle/ohs:12.2.1.3.0 .
+#     $ docker build --force-rm=true --no-cache=true --rm=true -t oracle/ohs:12.2.1.4.0 .
 #
 # Pull serverjre:8 base image
 # -----------------------------------
 FROM oracle/serverjre:8
 
-# Maintainer
-# ------------------------------------
-MAINTAINER Prabhat Kishore <prabhat.kishore@oracle.com>
-
 # Environment variables required for this build (do NOT change)
 # ----------------------------------------------
-ENV OHS_PKG=fmw_12.2.1.3.0_ohs_linux64_Disk1_1of1.zip \
-    OHS_BIN=fmw_12.2.1.3.0_ohs_linux64.bin \
-    ORACLE_HOME=/u01/oracle/ohssa \
-    PATH=$PATH:/usr/java/default/bin:/u01/oracle/ohssa/oracle_common/common/bin \
-    NM_PORT=5556 \
-    OHS_LISTEN_PORT=7777 \
-    OHS_SSL_PORT=4443 \
-    JAVA_HOME=/usr/java/default \
-    MW_HOME=/u01/oracle/ohssa \
-    DOMAIN_NAME=ohsDomain \
-    OHS_COMPONENT_NAME=ohs1 \
-    PATH=$PATH:$ORACLE_HOME/oracle_common/common/bin:$ORACLE_HOME/user_projects/domains/ohsDomain/bin:/u01/oracle/container-scripts \
-    WLST_HOME=/u01/oracle/ohssa/oracle_common/common/bin
+ENV OHS_PKG=fmw_12.2.1.4.0_ohs_linux64_Disk1_1of1.zip 
+ENV OHS_BIN=fmw_12.2.1.4.0_ohs_linux64.bin 
+ENV ORACLE_HOME=/u01/oracle
+ENV NM_PORT=5556 
+ENV OHS_LISTEN_PORT=7777 
+ENV OHS_SSL_PORT=4443 
+ENV JAVA_HOME=/usr/java/default 
+ENV DOMAIN_NAME=ohsDomain 
+ENV OHS_COMPONENT_NAME=ohs1 
+ENV PATH=${PATH}:${ORACLE_HOME}:/usr/java/default/bin:${ORACLE_HOME}/oracle_common/common/bin:${ORACLE_HOME}/user_projects/domains/ohsDomain/bin
+ENV WLST_HOME=/u01/oracle/oracle_common/common/bin
 
 
 # Copy packages to the new drive
 # -------------------------------------------------------
-COPY $OHS_PKG install.file oraInst.loc /u01/
+COPY ${OHS_PKG} install.file oraInst.loc /u01/
 
-# Install OL7 required packages. Refer FMW 12.2.1.3 System requirements guide for complete list of packages
+# Install OL7 required packages. Refer FMW 12.2.1.4 System requirements guide for complete list of packages
 # Setup filesystem and oracle user
 #---------------------------------------------------------------------------------------------------------
 RUN yum install -y unzip libaio sysstat make psmisc gcc && \
@@ -77,20 +71,24 @@ RUN yum install -y unzip libaio sysstat make psmisc gcc && \
 # Go to /u01 as user 'oracle' to proceed with OHS installation
 #--------------------------------------------------------
 USER oracle
-RUN cd /u01 && unzip -q /u01/$OHS_PKG && cd - && \
-    /u01/$OHS_BIN -silent -responseFile /u01/install.file -invPtrLoc /u01/oraInst.loc ORACLE_HOME=$ORACLE_HOME && \ 
-    rm /u01/$OHS_BIN  /u01/oraInst.loc /u01/install.file && \
-    mkdir /u01/oracle/container-scripts/ /u01/oracle/logs 
+WORKDIR /u01
+#RUN unzip -q /u01/${OHS_PKG} && cd - && \
+RUN unzip -q /u01/${OHS_PKG} && \
+    /u01/${OHS_BIN} -silent -responseFile /u01/install.file -invPtrLoc /u01/oraInst.loc ORACLE_HOME=${ORACLE_HOME} && \ 
+    rm /u01/${OHS_BIN}  /u01/oraInst.loc /u01/install.file && \
+    mkdir -p /u01/oracle/logs  && \
+    chown oracle:oracle -R /u01/oracle/logs 
 
 # Copy required files to build this image
 # ------------------------------------------------------
-COPY container-scripts/* /u01/oracle/container-scripts/
+COPY container-scripts/* /u01/oracle/
 
 #Expose all Ports
-EXPOSE $OHS_SSL_PORT $OHS_LISTEN_PORT $NM_PORT
+EXPOSE ${OHS_SSL_PORT} ${OHS_LISTEN_PORT} ${NM_PORT}
 
 # Final setup
-WORKDIR /u01/oracle/container-scripts
+USER oracle
+WORKDIR ${ORACLE_HOME} 
 
 # Provision OHS instance
-CMD ["/u01/oracle/container-scripts/provisionOHS.sh"]
+CMD ["/u01/oracle/provisionOHS.sh"]
