upload latest 23.5.0 for cman (#2858)
* upload latest 23.5.0 for cman

* fix lint iissues

* fix lint iissues

--- a/OracleDatabase/OracleConnectionManager/containerfiles/12.2.0.1/Containerfile
+++ b/OracleDatabase/OracleConnectionManager/containerfiles/12.2.0.1/Containerfile
@@ -25,6 +25,7 @@ FROM oraclelinux:7-slim
 
 # Maintainer
 # ----------
+# hadolint ignore=DL4000
 MAINTAINER Sanjay Singh (Sanjay.Singh@oracle.com), Paramdeep Saini (paramdeep.saini@oracle.com)
 
 # Environment variables required for this build (do NOT change)
@@ -47,6 +48,7 @@ ENV SETUP_LINUX_FILE="setupLinuxEnv.sh" \
     INSTALL_DB_BINARIES_FILE="installDBBinaries.sh" \
     container="true" 
 # Use second ENV so that variable get substituted
+# hadolint ignore=DL3044
 ENV  INSTALL_SCRIPTS=$INSTALL_DIR/install \
      PATH=/bin:/usr/bin:/sbin:/usr/sbin:$PATH \
      SCRIPT_DIR=$INSTALL_DIR/startup \
@@ -85,4 +87,5 @@ WORKDIR /home/oracle
 EXPOSE 1521 5500
 
 # Define default command to start Oracle Database.
+# hadolint ignore=DL3025
 CMD exec $SCRIPT_DIR/$RUN_FILE
