Update Instant Client dockerfile comments (#2863)
Signed-off-by: Christopher Jones <christopher.jones@oracle.com>
Co-authored-by: Gerald Venzl <gerald.venzl@oracle.com>

--- a/OracleInstantClient/oraclelinux9/19/Dockerfile
+++ b/OracleInstantClient/oraclelinux9/19/Dockerfile
@@ -2,7 +2,10 @@
 #
 # Copyright (c) 2014, 2024, Oracle and/or its affiliates.
 #
-# Container image template for Oracle Instant Client
+# Container image template for Oracle Instant Client 19
+#
+# This file is found at:
+# https://github.com/oracle/docker-images/blob/main/OracleInstantClient/oraclelinux9/19/Dockerfile
 #
 # HOW TO BUILD THIS IMAGE AND RUN A CONTAINER
 # --------------------------------------------
