Update for Instant Client 19.23
Signed-off-by: Christopher Jones <christopher.jones@oracle.com>

--- a/OracleInstantClient/oraclelinux7/19/Dockerfile
+++ b/OracleInstantClient/oraclelinux7/19/Dockerfile
@@ -1,8 +1,11 @@
 # LICENSE UPL 1.0
 #
-# Copyright (c) 2014, 2023, Oracle and/or its affiliates.
+# Copyright (c) 2014, 2024, Oracle and/or its affiliates.
 #
-# Container image template for Oracle Instant Client
+# Container image template for Oracle Instant Client 19
+#
+# This file is found at:
+# https://github.com/oracle/docker-images/blob/main/OracleInstantClient/oraclelinux7/19/Dockerfile
 #
 # HOW TO BUILD THIS IMAGE AND RUN A CONTAINER
 # --------------------------------------------
@@ -49,17 +52,17 @@
 # Also see https://yum.oracle.com/oracle-instant-client.html
 #
 # Base - one of these packages is required to run applications and tools
-#   oracle-instantclientXX.Y-basic      : Basic Package - All files required to run OCI, OCCI, and JDBC-OCI applications
-#   oracle-instantclientXX.Y-basiclite  : Basic Light Package - Smaller version of the Basic package, with only English error messages and Unicode, ASCII, and Western European character set support
+#   oracle-instantclient19.X-basic      : Basic Package - All files required to run OCI, OCCI, and JDBC-OCI applications
+#   oracle-instantclient19.X-basiclite  : Basic Light Package - Smaller version of the Basic package, with only English error messages and Unicode, ASCII, and Western European character set support
 #
 # Tools - optional packages (requires the 'basic' package)
-#   oracle-instantclientXX.Y-sqlplus    : SQL*Plus Package - The SQL*Plus command line tool for SQL and PL/SQL queries
-#   oracle-instantclientXX.Y-tools      : Tools Package - Includes Data Pump, SQL*Loader and Workload Replay Client
+#   oracle-instantclient19.X-sqlplus    : SQL*Plus Package - The SQL*Plus command line tool for SQL and PL/SQL queries
+#   oracle-instantclient19.X-tools      : Tools Package - Includes Data Pump, SQL*Loader and Workload Replay Client
 #
 # Development and Runtime - optional packages (requires the 'basic' package)
-#   oracle-instantclientXX.Y-devel      : SDK Package - Additional header files and an example makefile for developing Oracle applications with Instant Client
-#   oracle-instantclientXX.Y-jdbc       : JDBC Supplement Package - Additional support for Internationalization under JDBC
-#   oracle-instantclientXX.Y-odbc       : ODBC Package - Additional libraries for enabling ODBC applications
+#   oracle-instantclient19.X-devel      : SDK Package - Additional header files and an example makefile for developing Oracle applications with Instant Client
+#   oracle-instantclient19.X-jdbc       : JDBC Supplement Package - Additional support for Internationalization under JDBC
+#   oracle-instantclient19.X-odbc       : ODBC Package - Additional libraries for enabling ODBC applications
 #
 # PREBUILT CONTAINER
 # ------------------
@@ -72,7 +75,7 @@
 FROM oraclelinux:7-slim
 
 ARG release=19
-ARG update=22
+ARG update=23
 
 RUN  yum -y install oracle-release-el7 && \
      yum -y install oracle-instantclient${release}.${update}-basic oracle-instantclient${release}.${update}-devel oracle-instantclient${release}.${update}-sqlplus && \
