updated release versions to the Oct 2024 CPU.  JDK 17 is no longer available under no fee-term-and-conditions so it now requires users to download the binary first, as was the case before for JDK 8 and JDK 11.
Signed-off-by: Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>

--- a/OracleJava/17/Dockerfile
+++ b/OracleJava/17/Dockerfile
@@ -8,13 +8,12 @@
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
-# This dockerfile will download a copy of JDK 17 from
-#	https://download.oracle.com/java/17/latest/jdk-17_linux-<ARCH>_bin.tar.gz
-# 
-# It will use either x64 or aarch64 depending on the target platform
+# (1) jdk-17.XX_linux-x64_bin.tar.gz or jdk-17.XX_linux-aarch64_bin.tar.gz
+#     Download from https://www.oracle.com/java/technologies/downloads
 #
 # HOW TO BUILD THIS IMAGE
 # -----------------------
+# Put all downloaded files in the same directory as this Dockerfile
 # Run:
 #      $ docker build -t oracle/jdk:17 .
 #
@@ -29,30 +28,31 @@ LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
 # Since the files are compressed as tar.gz first dnf install tar. gzip is already in oraclelinux:8
 RUN dnf install -y tar
-	
+
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
 
 # Environment variables for the builder image.
 # Required to validate that you are using the correct file
 
-ENV JAVA_URL=https://download.oracle.com/java/17/latest \
-	JAVA_HOME=/usr/java/jdk-17
+ENV JAVA_HOME=/usr/java/jdk-17
 
 ##
+COPY *.tar.gz /tmp/
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN set -eux; \
 	ARCH="$(uname -m)" && \
-	# Java uses just x64 in the name of the tarball
     if [ "$ARCH" = "x86_64" ]; \
-        then ARCH="x64"; \
+    then \
+		mv "$(ls /tmp/jdk-17*_linux-x64_bin.tar.gz)" /tmp/jdk.tar.gz ; \
+        JAVA_SHA256=f7a6fdebeb11840e1f5314bc330feb75b67e52491cf39073dbf3e51e3889ff08 ; \
+    else \
+	    mv "$(ls /tmp/jdk-17*_linux-aarch64_bin.tar.gz)" /tmp/jdk.tar.gz ; \
+    	JAVA_SHA256=277e0010e7b17583e63827f9537a153ea79cb4b6ca28d523cd8a82f14a24a769 ; \
     fi && \
-    JAVA_PKG="$JAVA_URL"/jdk-17_linux-"${ARCH}"_bin.tar.gz ; \
-	JAVA_SHA256="$(curl "$JAVA_PKG".sha256)" ; \ 
-	curl --output /tmp/jdk.tgz "$JAVA_PKG" && \
-	echo "$JAVA_SHA256" */tmp/jdk.tgz | sha256sum -c; \
+	echo "$JAVA_SHA256 */tmp/jdk.tar.gz" | sha256sum -c -; \
 	mkdir -p "$JAVA_HOME"; \
-	tar --extract --file /tmp/jdk.tgz --directory "$JAVA_HOME" --strip-components 1
+	tar --extract --file /tmp/jdk.tar.gz --directory "$JAVA_HOME" --strip-components 1
 	
 ## Get a fresh version of OL8 for the final image	
 FROM oraclelinux:8
