removed trailing spaces and replaced OL with Oracle Linux in the comments
Signed-off-by: Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>

--- a/OracleJava/11/Dockerfile.ol8
+++ b/OracleJava/11/Dockerfile.ol8
@@ -55,7 +55,7 @@ RUN set -eux; \
     mkdir -p "$JAVA_HOME"; \
     tar --extract --file /tmp/jdk.tar.gz --directory "$JAVA_HOME" --strip-components 1
 
-## Get a fresh version of OL8 for the final image
+## Get a fresh version of Oracle Linux 8 for the final image
 FROM oraclelinux:8
 
 # Default to UTF-8 file.encoding
