--- a/OracleJava/8/jdk/Dockerfile
+++ b/OracleJava/8/jdk/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 Oracle and/or its affiliates. 
+# Copyright (c) 2024 Oracle and/or its affiliates.
 #
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 #
@@ -48,20 +48,20 @@ RUN set -eux; \
         JAVA_SHA256=b396978a716b7d23ccccabfe5c47c3b75d2434d7f8f7af690bc648172382720d ; \
     else \
         mv "$(ls /tmp/jdk-8*-linux-aarch64.tar.gz)" /tmp/jdk.tar.gz ; \
-        JAVA_SHA256=e68d3e31ffcf7f05a4de65d04974843073bdff238bb6524adb272de9e616be7c ; \        
+        JAVA_SHA256=e68d3e31ffcf7f05a4de65d04974843073bdff238bb6524adb272de9e616be7c ; \
     fi && \
     echo "$JAVA_SHA256 */tmp/jdk.tar.gz" | sha256sum -c -; \
     mkdir -p "$JAVA_HOME"; \
     tar --extract --file /tmp/jdk.tar.gz --directory "$JAVA_HOME" --strip-components 1
 
-## Get a fresh version of SLIM for the final image
+## Get a fresh version of Oracle Linux 7-slim for the final image
 FROM oraclelinux:7-slim
 
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
 
-ENV JAVA_HOME=/usr/java/jdk-8 
-    
+ENV JAVA_HOME=/usr/java/jdk-8
+
 ENV PATH $JAVA_HOME/bin:$PATH
 
 # Copy the uncompressed Java Runtime from the builder image
@@ -77,8 +77,7 @@ RUN yum -y update; \
         [ ! -e "/usr/bin/$base" ]; \
         alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
     done; \
-# -Xshare:dump will create a CDS archive to improve startup in subsequent runs    
-# the file will be stored as /usr/java/jdk-8/jre/lib/amd64/server/classes.jsa 
+# -Xshare:dump will create a CDS archive to improve startup in subsequent runs
+# the file will be stored as /usr/java/jdk-8/jre/lib/amd64/server/classes.jsa
 # See https://docs.oracle.com/javase/8/docs/technotes/guides/vm/class-data-sharing.html
     java -Xshare:dump;
-    
