--- a/OracleJava/21/Dockerfile
+++ b/OracleJava/21/Dockerfile
@@ -9,8 +9,8 @@
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
 # This dockerfile will download a copy of JDK 21 from
-#    https://download.oracle.com/java/21/latest/jdk-21_linux-<ARCH>_bin.tar.gz  
-# 
+#    https://download.oracle.com/java/21/latest/jdk-21_linux-<ARCH>_bin.tar.gz
+#
 # It will use either x64 or aarch64 depending on the target platform
 #
 # HOW TO BUILD THIS IMAGE
@@ -29,14 +29,14 @@ LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
 # Since the files are compressed as tar.gz first dnf install tar. gzip is already in oraclelinux:8
 RUN set -eux; \
-    dnf install -y tar; 
-    
+    dnf install -y tar;
+
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
 
 # Environment variables for the builder image.
 # Required to validate that you are using the correct file
-    
+
 ENV JAVA_URL=https://download.oracle.com/java/21/latest \
     JAVA_HOME=/usr/java/jdk-21
 
@@ -49,21 +49,21 @@ RUN set -eux; \
         then ARCH="x64"; \
     fi && \
     JAVA_PKG="$JAVA_URL"/jdk-21_linux-"${ARCH}"_bin.tar.gz ; \
-    JAVA_SHA256=$(curl "$JAVA_PKG".sha256) ; \ 
+    JAVA_SHA256=$(curl "$JAVA_PKG".sha256) ; \
     curl --output /tmp/jdk.tgz "$JAVA_PKG" && \
     echo "$JAVA_SHA256" */tmp/jdk.tgz | sha256sum -c; \
     mkdir -p "$JAVA_HOME"; \
     tar --extract --file /tmp/jdk.tgz --directory "$JAVA_HOME" --strip-components 1
-    
-## Get a fresh version of OL8 for the final image    
+
+## Get a fresh version of Oracle Linux 8 for the final image
 FROM oraclelinux:8
 
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
 ENV JAVA_HOME=/usr/java/jdk-21
-ENV PATH $JAVA_HOME/bin:$PATH    
+ENV PATH $JAVA_HOME/bin:$PATH
 
-# If you need the Java Version you can read it from the release file with 
+# If you need the Java Version you can read it from the release file with
 # JAVA_VERSION=$(sed -n '/^JAVA_VERSION="/{s///;s/"//;p;}' "$JAVA_HOME"/release);
 
 # Copy the uncompressed Java Runtime from the builder image
@@ -72,7 +72,7 @@ COPY --from=builder $JAVA_HOME $JAVA_HOME
 RUN set -eux; \
 # Ensure we get the latest OL 8 updates available at build time
     dnf -y update; \
-# JDK assumes freetype is available    
+# JDK assumes freetype is available
     dnf install -y \
         freetype fontconfig \
     ; \
@@ -84,5 +84,5 @@ RUN set -eux; \
         [ ! -e "/usr/bin/$base" ]; \
         alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
     done;
-    
+
 CMD ["jshell"]
