--- a/OracleJava/8/jdk/Dockerfile.ol8
+++ b/OracleJava/8/jdk/Dockerfile.ol8
@@ -48,13 +48,13 @@ RUN set -eux; \
         JAVA_SHA256=b396978a716b7d23ccccabfe5c47c3b75d2434d7f8f7af690bc648172382720d ; \
     else \
         mv "$(ls /tmp/jdk-8*-linux-aarch64.tar.gz)" /tmp/jdk.tar.gz ; \
-        JAVA_SHA256=e68d3e31ffcf7f05a4de65d04974843073bdff238bb6524adb272de9e616be7c ; \        
+        JAVA_SHA256=e68d3e31ffcf7f05a4de65d04974843073bdff238bb6524adb272de9e616be7c ; \
     fi && \
     echo "$JAVA_SHA256 */tmp/jdk.tar.gz" | sha256sum -c -; \
     mkdir -p "$JAVA_HOME"; \
     tar --extract --file /tmp/jdk.tar.gz --directory "$JAVA_HOME" --strip-components 1
 
-## Get a fresh version of OL 8 for the final image
+## Get a fresh version of Oracle Linux 8 for the final image
 
 FROM oraclelinux:8
 
