Changed the JDK 17 and earlier dockerfiles to download the binaries from cloud.oracle.com, using download tokens, instead of having to be manually updated for all CPUs.  Dropped the Oracle Linux 7 dockerfiles.  Some dockerfiles had an extension with the Oracle Linux name but the "default" ones did not. Normalized it so that all Dockerfiles now indicate which version of Oracle Linux they use."
Signed-off-by: Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>

--- a/OracleJava/23/Dockerfile.ol9
+++ b/OracleJava/23/Dockerfile.ol9
@@ -16,7 +16,7 @@
 # HOW TO BUILD THIS IMAGE
 # -----------------------
 # Run:
-#      $ docker build -t oracle/jdk:23 .
+#      $ docker build --file Dockerfile.ol9 --tag oracle/jdk:23 .
 #
 # This command is already scripted in build.sh so you can alternatively run
 #      $ bash build.sh
