--- a/OracleJava/17/Dockerfile.ol8
+++ b/OracleJava/17/Dockerfile.ol8
@@ -1,35 +1,41 @@
-# Copyright (c) 2022, 2023 Oracle and/or its affiliates.
+# Copyright (c) 2020, 2025 Oracle and/or its affiliates.
 #
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 #
 # ORACLE DOCKERFILES PROJECT
 # --------------------------
-# This is the Dockerfile for Oracle JDK 21 on Oracle Linux 8
+# This is the Dockerfile for Oracle JDK 17 on Oracle Linux 8
+#
+# ARGS
+# ----
+# This docker file requires two arguments:
+# 1) JDK17_TOKEN is a valid dowload token for JDK 17.  It can be created in cloud.oracle.com/jms under Java Download
+# Token generation is documented on https://docs.cloud.oracle.com/en-us/iaas/jms/doc/java-download.html
+# 2) OCI_REGION is the Oracle Cloud Infrastucture (OCI) region where the token is generated.
 #
 # REQUIRED FILES TO BUILD THIS IMAGE
 # ----------------------------------
-# This dockerfile will download a copy of JDK 21 from
-#    https://download.oracle.com/java/21/latest/jdk-21_linux-<ARCH>_bin.tar.gz
+# This dockerfile will download a copy of latest version of JDK 17 from
+#	https://javamanagementservice-download.<OCI_REGION>.oci.oraclecloud.com/java/17/latest/
 #
 # It will use either x64 or aarch64 depending on the target platform
 #
 # HOW TO BUILD THIS IMAGE
 # -----------------------
 # Run:
-#      $ docker build -t oracle/jdk:21 .
-#
-# This command is already scripted in build.sh so you can alternatively run
-#      $ bash build.sh
+#      $ docker build --file Dockerfile.ol8 --tag oracle/jdk:17 --build-arg JDK17_TOKEN=<token> --build-arg OCI_REGION=<region> .
 #
 # The builder image will be used to uncompress the tar.gz file with the Java Runtime.
 
 FROM oraclelinux:8 as builder
+ARG JDK17_TOKEN
+ARG OCI_REGION
 
 LABEL maintainer="Aurelio Garcia-Ribeyro <aurelio.garciaribeyro@oracle.com>"
 
-# Since the files are compressed as tar.gz first dnf install tar. gzip is already in oraclelinux:8
-RUN set -eux; \
-    dnf install -y tar;
+# Since the files are compressed as tar.gz first dnf install tar.
+# gzip is already in oraclelinux:8
+RUN dnf install -y tar
 
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
@@ -37,30 +43,29 @@ ENV LANG en_US.UTF-8
 # Environment variables for the builder image.
 # Required to validate that you are using the correct file
 
-ENV JAVA_URL=https://download.oracle.com/java/21/latest \
-    JAVA_HOME=/usr/java/jdk-21
+ENV JAVA_URL=https://javamanagementservice-download."${OCI_REGION}".oci.oraclecloud.com/java/17/latest/ \
+    JAVA_HOME=/usr/java/jdk-17
 
-##
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN set -eux; \
     ARCH="$(uname -m)" && \
     # Java uses just x64 in the name of the tarball
     if [ "$ARCH" = "x86_64" ]; \
-        then ARCH="x64"; \
+    then ARCH="x64"; \
     fi && \
-    JAVA_PKG="$JAVA_URL"/jdk-21_linux-"${ARCH}"_bin.tar.gz ; \
-    JAVA_SHA256=$(curl "$JAVA_PKG".sha256) ; \
-    curl --output /tmp/jdk.tgz "$JAVA_PKG" && \
+    JAVA_PKG="$JAVA_URL"jdk-17_linux-"${ARCH}"_bin.tar.gz; \
+    JAVA_SHA256="$(curl -L "$JAVA_PKG".sha256)" ; \
+    curl -L --header token:${JDK17_TOKEN} --output /tmp/jdk.tgz "$JAVA_PKG" && \
     echo "$JAVA_SHA256" */tmp/jdk.tgz | sha256sum -c; \
     mkdir -p "$JAVA_HOME"; \
     tar --extract --file /tmp/jdk.tgz --directory "$JAVA_HOME" --strip-components 1
 
-## Get a fresh version of Oracle Linux 8 for the final image
+## Get a new image of Oracle Linux 8 for the final image
 FROM oraclelinux:8
 
 # Default to UTF-8 file.encoding
 ENV LANG en_US.UTF-8
-ENV JAVA_HOME=/usr/java/jdk-21
+ENV JAVA_HOME=/usr/java/jdk-17
 ENV PATH $JAVA_HOME/bin:$PATH
 
 # If you need the Java Version you can read it from the release file with
@@ -70,19 +75,19 @@ ENV PATH $JAVA_HOME/bin:$PATH
 COPY --from=builder $JAVA_HOME $JAVA_HOME
 
 RUN set -eux; \
-# Ensure we get the latest OL 8 updates available at build time
+    # Ensure we get the latest OL 8 updates available at build time
     dnf -y update; \
-# JDK assumes freetype is available
+    # JDK assumes freetype is available
     dnf install -y \
-        freetype fontconfig \
+    freetype fontconfig \
     ; \
     rm -rf /var/cache/dnf; \
     ln -sfT "$JAVA_HOME" /usr/java/default; \
     ln -sfT "$JAVA_HOME" /usr/java/latest; \
     for bin in "$JAVA_HOME/bin/"*; do \
-        base="$(basename "$bin")"; \
-        [ ! -e "/usr/bin/$base" ]; \
-        alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
+    base="$(basename "$bin")"; \
+    [ ! -e "/usr/bin/$base" ]; \
+    alternatives --install "/usr/bin/$base" "$base" "$bin" 20000; \
     done;
 
 CMD ["jshell"]
