--- a/OracleJava/21/Dockerfile.ol9
+++ b/OracleJava/21/Dockerfile.ol9
@@ -16,7 +16,7 @@
 # HOW TO BUILD THIS IMAGE
 # -----------------------
 # Run:
-#      $ docker build -t oracle/jdk:21 .
+#      $ docker build --file Dockerfile.ol9 --tag oracle/jdk:21 .
 #
 # This command is already scripted in build.sh so you can alternatively run
 #      $ bash build.sh 9
