--- a/OracleDatabase/RAC/OracleRealApplicationClusters/samples/rac-compose/racimage/withoutresponsefiles/blockdevices/podman-compose.yml
+++ b/OracleDatabase/RAC/OracleRealApplicationClusters/samples/rac-compose/racimage/withoutresponsefiles/blockdevices/podman-compose.yml
@@ -151,8 +151,9 @@ services:
     image: ${CMAN_IMAGE_NAME}
     dns_search: ${DNS_DOMAIN}
     dns: ${DNS_PUBLIC_IP}
-    environment:
-      DOMAIN_NAME: ${DNS_DOMAIN}
+    environment: 
+      DOMAIN: ${DNS_DOMAIN}
+      DNS_SERVER: ${DNS_PUBLIC_IP}
       PUBLIC_IP: ${CMAN_PUBLIC_IP}
       PUBLIC_HOSTNAME: ${CMAN_PUBLIC_HOSTNAME}
       DB_HOSTDETAILS: ${DB_HOSTDETAILS}
